--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1 class="text-2xl font-bold text-center">ជ្រើសរើសបុគ្គ-លិក</h1>
             </div>
             
-            <div class="flex-1 overflow-y-auto">
+            <div id="employeeListContent" class="flex-1 overflow-y-auto">
                 <p id="employeeListHelpText" class="text-center text-gray-700 text-md p-5 font-semibold">សូមអ្នកជ្រើសរើសគណនីដើម្បីស្កេនវត្តមាន</p>
             
                 <div id="searchContainer" class="p-4 pt-0 relative"> 
