--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="km">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>ប្រព័ន្ធវត្តមានបុគ្គលិក</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
